fix(team-roles setup): add z-index to side nav

--- a/src/app/navs/side-nav/side-nav.component.css
+++ b/src/app/navs/side-nav/side-nav.component.css
@@ -11,6 +11,7 @@
   user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
+  z-index: 19;
 }
 
 .sidenav-menu-item {
