--- a/src/app/setups/team-roles/team-roles.component.css
+++ b/src/app/setups/team-roles/team-roles.component.css
@@ -7,7 +7,7 @@
 .btn-fte-toolbar {
   width: 90px;
   height: 35px;
-  z-index: -1;
+  /* z-index: -1; */
   position: sticky;
 }
 
@@ -23,7 +23,7 @@
   vertical-align: middle;
   border-top: none;
   white-space: nowrap;
-  z-index: -1;
+  /* z-index: -1; */
   position: sticky;
 }
 
